[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 99
multi_line_output = 3
use_parentheses = true

[tool.poetry]
name = "barbthroat"
version = "0.1.1"
description = "A library to help write directional strategies for Hummingbot."
authors = ["discosultan <jaanusvarus@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.3"
aiolimiter = "^1.0.0"
asyncstdlib = "^3.10.5"
simplejson = "^3.18.0"
tenacity = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
types-simplejson = "^3.18.0.0"
isort = "^5.11.4"
mypy = "^0.991"

[tool.mypy]
ignore_missing_imports = true
